--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 <TR><TABLE width=80% height=100% bgcolor=FFFFFF>
 		<TR height=20%>
 			<TABLE WIDTH=80%  HEIGHT=100% BGCOLOR=FFFFFF>
-			<TR><TD width =70% COLSPAN=2 ALIGN=CENTER ><h1>EAZY MARKET 青松市集</h1></TD>
+			<TR><TD width =70% COLSPAN=2 ALIGN=CENTER ><h1>EASY MARKET 青松市集</h1></TD>
 				<td ROWSPAN=2 width=30%><img src="https://scontent-hkg4-1.xx.fbcdn.net/v/t1.0-9/73100874_1223993177784065_6419789176127881216_n.jpg?_nc_cat=102&_nc_sid=730e14&_nc_ohc=1ZjoXXL_SiMAX_xSi2w&_nc_ht=scontent-hkg4-1.xx&oh=b7ee837ccbcfa5e91ffbaca16140a490&oe=5ED2C029" width=100%></src></td></TR>
 		
 			<TR>
-				<TD width =40% ALIGN=CENTER ><font size="6">text</font></TD>
-				<TD width =40% ALIGN=CENTER>text</TD>
+				<TD width =35% ALIGN=CENTER ><font size="6">text</font></TD>
+				<TD width =35% ALIGN=CENTER>text</TD>
 			</TR>
 			</table>
 		</Tr>
