--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
   </ul>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://scontent-hkg4-1.xx.fbcdn.net/v/t1.0-9/73100874_1223993177784065_6419789176127881216_n.jpg?_nc_cat=102&_nc_sid=730e14&_nc_ohc=1ZjoXXL_SiMAX_xSi2w&_nc_ht=scontent-hkg4-1.xx&oh=b7ee837ccbcfa5e91ffbaca16140a490&oe=5ED2C029" alt="Los Angelas" width=100% height="1000">
+      <img src="https://scontent-hkg4-1.xx.fbcdn.net/v/t1.0-9/73100874_1223993177784065_6419789176127881216_n.jpg?_nc_cat=102&_nc_sid=730e14&_nc_ohc=1ZjoXXL_SiMAX_xSi2w&_nc_ht=scontent-hkg4-1.xx&oh=b7ee837ccbcfa5e91ffbaca16140a490&oe=5ED2C029" width=100% height="600">
       <div class="carousel-caption">
         <h3>TEXT</h3>
         <p>TEXT</p>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="https://scontent-hkg4-1.xx.fbcdn.net/v/t1.0-9/73100874_1223993177784065_6419789176127881216_n.jpg?_nc_cat=102&_nc_sid=730e14&_nc_ohc=1ZjoXXL_SiMAX_xSi2w&_nc_ht=scontent-hkg4-1.xx&oh=b7ee837ccbcfa5e91ffbaca16140a490&oe=5ED2C029" alt="Chicago" width=100% height="1000">
+      <img src="https://scontent-hkg4-1.xx.fbcdn.net/v/t1.0-9/73100874_1223993177784065_6419789176127881216_n.jpg?_nc_cat=102&_nc_sid=730e14&_nc_ohc=1ZjoXXL_SiMAX_xSi2w&_nc_ht=scontent-hkg4-1.xx&oh=b7ee837ccbcfa5e91ffbaca16140a490&oe=5ED2C029" width=100% height="600">
       <div class="carousel-caption">
         <h3>TEXT</h3>
         <p>TEXT</p>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="https://scontent-hkg4-1.xx.fbcdn.net/v/t1.0-9/73100874_1223993177784065_6419789176127881216_n.jpg?_nc_cat=102&_nc_sid=730e14&_nc_ohc=1ZjoXXL_SiMAX_xSi2w&_nc_ht=scontent-hkg4-1.xx&oh=b7ee837ccbcfa5e91ffbaca16140a490&oe=5ED2C029" alt="New York" width=100% height="1000">
+      <img src="https://scontent-hkg4-1.xx.fbcdn.net/v/t1.0-9/73100874_1223993177784065_6419789176127881216_n.jpg?_nc_cat=102&_nc_sid=730e14&_nc_ohc=1ZjoXXL_SiMAX_xSi2w&_nc_ht=scontent-hkg4-1.xx&oh=b7ee837ccbcfa5e91ffbaca16140a490&oe=5ED2C029" width=100% height="600">
       <div class="carousel-caption">
         <h3>TEXT</h3>
         <p>TEXT</p>
